调整接口定义
