# docs/swagger.json
@@ -7,6 +7,164 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/fs": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "fs"
+                ],
+                "summary": "创建文件或目录",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/mixin.CreateCaseRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "fs"
+                ],
+                "summary": "移除文件或目录",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/mixin.DeleteCaseRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/fs/move": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "fs"
+                ],
+                "summary": "移动文件或目录",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/mixin.MoveCaseRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/fs/rename": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "fs"
+                ],
+                "summary": "重命名文件或目录",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/mixin.RenameCaseRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/woosh.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
         "/api/fs/{id}": {
             "get": {
                 "consumes": [
@@ -22,7 +180,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "文件id",
+                        "description": "操作id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -71,10 +229,28 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "目录id",
+                        "description": "操作id",
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "搜索",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页的大小",
+                        "name": "pageSize",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -120,17 +296,35 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "目录id",
+                        "description": "操作id",
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "搜索",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页的大小",
+                        "name": "pageSize",
+                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/mixin.GetFilesCaseRes"
+                            "$ref": "#/definitions/mixin.GetDirectoriesCaseRes"
                         }
                     },
                     "400": {
@@ -156,6 +350,12 @@
         }
     },
     "definitions": {
+        "mixin.CreateCaseRes": {
+            "type": "object"
+        },
+        "mixin.DeleteCaseRes": {
+            "type": "object"
+        },
         "mixin.GetDirectoriesCaseRes": {
             "type": "object",
             "properties": {
@@ -201,9 +401,6 @@
         "mixin.GetDirectoryCaseRes": {
             "type": "object"
         },
-        "mixin.GetFilesCaseRes": {
-            "type": "object"
-        },
         "mixin.GetInfoCaseRes": {
             "type": "object",
             "properties": {
@@ -223,6 +420,12 @@
                     "example": "a new dir"
                 }
             }
+        },
+        "mixin.MoveCaseRes": {
+            "type": "object"
+        },
+        "mixin.RenameCaseRes": {
+            "type": "object"
         },
         "woosh.ProblemDetails": {
             "type": "object",
